crates/core/tests/snapshots/setting_env_test__setting_env__unnamed_struct__supports_different_types.snap
---
source: crates/core/tests/setting_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix, None);
    let mut partial = Self::default();
    partial.1 = env.get("A")?;
    partial.2 = env.get("B")?;
    partial.3 = env.get("C")?;
    partial.4 = env.get("D")?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
