crates/core/tests/snapshots/setting_env_test__setting_env__unnamed_struct__supports_wrappers.snap
---
source: crates/core/tests/setting_env_test.rs
expression: pretty(container.impl_partial_env_values())
---
fn env_values_with_prefix(
    prefix: Option<&str>,
) -> std::result::Result<Option<Self>, schematic::ConfigError> {
    use schematic::internal::*;
    let mut env = EnvManager::new(prefix, None);
    let mut partial = Self::default();
    partial.0 = env.get("A")?;
    partial.1 = env.get("B")?;
    Ok(if env.is_empty() { None } else { Some(partial) })
}
